--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "clsx": "^2.1.1",
+    "immer": "^10.1.1",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "use-immer": "^0.10.0"
   },
   "devDependencies": {
     "@types/node": "^20",
